# C-Ray-Tracer

./: CMakeLists.txt  README.md  README.txt  Vagrantfile  camera.cpp  camera.h  json_parser.cpp  json_parser.h  lights.cpp  lights.h  main.cpp  main.json  mother_of_objects.cpp  mother_of_objects.h  plane.cpp  plane.h  sphere.cpp  sphere.h  unittests.cpp  vtray.cpp
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders
Coverage_Report/: index-sort-f.html  index-sort-l.html  index.html
Coverage_Report/vagrant/: index-sort-f.html  index-sort-l.html  index.html  json_parser.cpp.func-sort-c.html  json_parser.cpp.func.html  json_parser.cpp.gcov.html  json_parser.h.func-sort-c.html  json_parser.h.func.html  json_parser.h.gcov.html  mother_of_objects.h.func-sort-c.html  mother_of_objects.h.func.html  mother_of_objects.h.gcov.html
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  scene0.json  unittests  vtray
_build/Testing/Temporary/: CTestCostData.txt
_build2/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
_build2/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease  unittests_autogen_cmakeRulesBuildPhase.makeDebug  unittests_autogen_cmakeRulesBuildPhase.makeMinSizeRel  unittests_autogen_cmakeRulesBuildPhase.makeRelWithDebInfo  unittests_autogen_cmakeRulesBuildPhase.makeRelease  vtray_autogen_cmakeRulesBuildPhase.makeDebug  vtray_autogen_cmakeRulesBuildPhase.makeMinSizeRel  vtray_autogen_cmakeRulesBuildPhase.makeRelWithDebInfo  vtray_autogen_cmakeRulesBuildPhase.makeRelease
_build2/Debug/: unittests  vtray
_build2/VTRAY.build/Debug/ALL_BUILD.build/: Script-2ACEF34A11174026B4D45644.sh  dgph
_build2/VTRAY.build/Debug/ZERO_CHECK.build/: Script-FBE641BB33A54723B0D7E45E.sh  dgph
_build2/VTRAY.build/Debug/unittests.build/: dgph
_build2/VTRAY.build/Debug/unittests.build/Objects-normal/x86_64/: camera.d  json_parser.dia  lights.d  moc_compilation.d  mother_of_objects.d  unittests.LinkFileList  unittests.d
_build2/VTRAY.build/Debug/unittests_autogen.build/: Script-6E4300DBE3E14E15A1A20C3C.sh  dgph
_build2/VTRAY.build/Debug/vtray.build/: dgph
_build2/VTRAY.build/Debug/vtray_autogen.build/: Script-2E13D57C35EE4E4E859B87E7.sh  dgph
_build2/VTRAY.xcodeproj/: project.pbxproj
_build2/VTRAY.xcodeproj/project.xcworkspace/xcshareddata/: VTRAY.xcscmblueprint
_build2/VTRAY.xcodeproj/project.xcworkspace/xcuserdata/sethbalodi.xcuserdatad/: UserInterfaceState.xcuserstate
_build2/VTRAY.xcodeproj/xcuserdata/sethbalodi.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
_build2/VTRAY.xcodeproj/xcuserdata/sethbalodi.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  RUN_TESTS.xcscheme  ZERO_CHECK.xcscheme  unittests.xcscheme  unittests_autogen.xcscheme  vtray.xcscheme  vtray_autogen.xcscheme  xcschememanagement.plist
scripts/: coverage.sh  tidy.sh
tests/: scene1.json  scene2.json  scene3.json  scene4.json
(+9 files in other folders)
